--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ com_crashlytics_export_strings.xml
 
 # project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using SublimeText
-# *.sublime-project
+*.sublime-project
 
 # sftp configuration file
 sftp-config.json
